tests/lean/inductionMutual.lean.expected.out
inductionMutual.lean:11:2-11:14: error: 'induction' tactic does not support mutually inductive types, the eliminator 'A.rec' has multiple motives
